==> AeviceAw/frdm-rw612/source/rgbHandler.c <==
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include "fsl_common.h"
#include "fsl_i2c.h"
#include "rgbHandler.h"

static status_t IIC0_Master_2_Byte_Write(uint8_t reg, uint8_t data)
{
    return i2c_write(DEV_ADD, reg, &data, 1);
}

status_t RGB_Init(void){

	volatile status_t status = kStatus_Fail;

    status &= IIC0_Master_2_Byte_Write(SHUTDOWN_ADD, WRITE_SHUTDOWN_REG);
    status &= IIC0_Master_2_Byte_Write(LED_MODE_ADD, WRITE_LED_MODE_REG_2);
    status &= IIC0_Master_2_Byte_Write(CURRENT_ADD, WRITE_CURRENT_REG);
    status &= IIC0_Master_2_Byte_Write(PWM1_ADD, 0xFF);
    status &= IIC0_Master_2_Byte_Write(PWM2_ADD, 0xFF);
    status &= IIC0_Master_2_Byte_Write(PWM3_ADD, 0xFF);
    status &= IIC0_Master_2_Byte_Write(DATA_UPDATE_ADD, WRITE_DATA_UPDATE_REG);
    status &= IIC0_Master_2_Byte_Write(T01_ADD, WRITE_T01_REG);
    status &= IIC0_Master_2_Byte_Write(T02_ADD, WRITE_T02_REG);
    status &= IIC0_Master_2_Byte_Write(T03_ADD, WRITE_T03_REG);
    status &= IIC0_Master_2_Byte_Write(T1T21_ADD, WRITE_T1T21_REG);
    status &= IIC0_Master_2_Byte_Write(T1T22_ADD, WRITE_T1T22_REG);
    status &= IIC0_Master_2_Byte_Write(T1T23_ADD, WRITE_T1T23_REG);
    status &= IIC0_Master_2_Byte_Write(T3T41_ADD, WRITE_T3T41_REG);
    status &= IIC0_Master_2_Byte_Write(T3T42_ADD, WRITE_T3T42_REG);
    status &= IIC0_Master_2_Byte_Write(T3T43_ADD, WRITE_T3T43_REG);
    status &= IIC0_Master_2_Byte_Write(LED_CONTROL_ADD, WRITE_LED_CONTROL_REG);
    status &= IIC0_Master_2_Byte_Write(TIME_UPDATE_ADD, WRITE_TIME_UPDATE_REG);

    /* RGB Initialize Sequence */
    uint8_t sequence_type = 1;
    switch (sequence_type){
        case 0:
            TEST_RGB_COLOR();
            break;
        case 1:
            RGB_Startup_Sequence();
            break;
    } // end switch(LED_TEST)

    status &= RGB_Write_Colour(PURPLE_PULSING);

    return status;
}

void RGB_Startup_Sequence(void) {
    bool status = false;
    RGB_Colour startUpSeq[] = {
                               CYAN_GLOWING, GREEN_GLOWING, CYAN_GLOWING, GREEN_GLOWING,
                               CYAN_GLOWING, GREEN_GLOWING, CYAN_GLOWING, GREEN_GLOWING};

    for(uint8_t i = 0; i < sizeof(startUpSeq); i++) {
        status = RGB_Write_Colour(startUpSeq[i]);
        if(status!=kStatus_Success) {
            break;//failed to write
        }
        SDK_DelayAtLeastUs(200000, CLOCK_GetFreq(kCLOCK_CoreSysClk));
    } // end loop through LED Color
}
