==> AeviceAw/OTA_RA6M3_v1/aws_ek_ra6m3_ota_app_wifi_da16200/src/Thread_RGB/rgbHandler.c <==
#include "initialisations.h"

fsp_err_t RGB_Init(void){

    volatile fsp_err_t status=FSP_ERR_ASSERTION;

    status = R_IIC_MASTER_Open (&g_i2c_rgb_master_ctrl, &g_i2c_rgb_master_cfg);

    status &= IIC0_Master_2_Byte_Write(SHUTDOWN_ADD, WRITE_SHUTDOWN_REG);
    status &= IIC0_Master_2_Byte_Write(LED_MODE_ADD, WRITE_LED_MODE_REG_2);
    status &= IIC0_Master_2_Byte_Write(CURRENT_ADD, WRITE_CURRENT_REG);
    status &= IIC0_Master_2_Byte_Write(PWM1_ADD, 0xFF);
    status &= IIC0_Master_2_Byte_Write(PWM2_ADD, 0xFF);
    status &= IIC0_Master_2_Byte_Write(PWM3_ADD, 0xFF);
    status &= IIC0_Master_2_Byte_Write(DATA_UPDATE_ADD, WRITE_DATA_UPDATE_REG);
    status &= IIC0_Master_2_Byte_Write(T01_ADD, WRITE_T01_REG);
    status &= IIC0_Master_2_Byte_Write(T02_ADD, WRITE_T02_REG);
    status &= IIC0_Master_2_Byte_Write(T03_ADD, WRITE_T03_REG);
    status &= IIC0_Master_2_Byte_Write(T1T21_ADD, WRITE_T1T21_REG);
    status &= IIC0_Master_2_Byte_Write(T1T22_ADD, WRITE_T1T22_REG);
    status &= IIC0_Master_2_Byte_Write(T1T23_ADD, WRITE_T1T23_REG);
    status &= IIC0_Master_2_Byte_Write(T3T41_ADD, WRITE_T3T41_REG);
    status &= IIC0_Master_2_Byte_Write(T3T42_ADD, WRITE_T3T42_REG);
    status &= IIC0_Master_2_Byte_Write(T3T43_ADD, WRITE_T3T43_REG);
    status &= IIC0_Master_2_Byte_Write(LED_CONTROL_ADD, WRITE_LED_CONTROL_REG);
    status &= IIC0_Master_2_Byte_Write(TIME_UPDATE_ADD, WRITE_TIME_UPDATE_REG);

    /* RGB Initialize Sequence */
    uint8_t sequence_type = 1;
    switch (sequence_type){
        case 0:
            TEST_RGB_COLOR();
            break;
        case 1:
            RGB_Startup_Sequence();
            break;
    } // end switch(LED_TEST)

    status &= RGB_Write_Colour(PURPLE_PULSING);

    return status;
}

void RGB_Startup_Sequence(void) {
    bool status = false;
    RGB_Colour startUpSeq[] = {
                               CYAN_GLOWING, GREEN_GLOWING, CYAN_GLOWING, GREEN_GLOWING,
                               CYAN_GLOWING, GREEN_GLOWING, CYAN_GLOWING, GREEN_GLOWING};

    for(uint8_t i = 0; i < sizeof(startUpSeq); i++) {
        status = RGB_Write_Colour(startUpSeq[i]);
        if(status!=FSP_SUCCESS) {
            break;//failed to write
        }
        vTaskDelay(STARTUP_LED_DELAY_COUNT);
    } // end loop through LED Color

    if(status==FSP_SUCCESS) {
        rgb_init_status = true;//RGB successfully initialised
    } // end if FSP_SUCCESS
}

fsp_err_t IIC0_Master_2_Byte_Write(uint8_t inRegAdd, uint8_t inRegDat) {
    uint8_t write_buff[I2C_BUF_LEN]={0};
    write_buff[0] = inRegAdd;
    write_buff[1] = inRegDat;

    memcpy(g_master_buf, write_buff, I2C_BUF_LEN);
    g_master_event = (i2c_master_event_t)I2C_RESET_VALUE;

    status = R_IIC_MASTER_Write(&g_i2c_rgb_master_ctrl, write_buff, I2C_BUF_LEN, false);
    vTaskDelay(10);//Delay to show in oscilloscope
    //vTaskDelay(1000); // Delay for 1.0 sec
    return status;
}
